# Proxy-Server

./: .gitignore  BoostServer.hpp  CMakeLists.txt
include/proxy/: Connection.hpp  JobCache.hpp  JobFetcher.hpp  TcpServer.hpp
include/sockets/: WebSocketServer.h
include/websockets/: WebSocketServer.hpp
src/: CMakeLists.txt  JobCache.cpp  JobFetcher.cpp  TcpServer.cpp  main.cpp
src/proxy/: CMakeLists.txt  JobCache.cpp  JobFetcher.cpp  TcpServer.cpp
src/websockets/: CMakeLists.txt  WebSocketServer.cpp
tests/proxy_tests/: main.cpp
